# Models/Reservations/Reservations.cs
@@ -11,35 +11,36 @@ namespace CasaDanaAPI.Models.Reservations
         
         [Required]
         [MaxLength(50)]
-        public required int NumberOfPersons { get; set; }
+        public int NumberOfPersons { get; set; } = 1; 
         
         [Required]
-        public required DateTime Start { get; set; }
+        public DateTime Start { get; set; } = DateTime.UtcNow; 
         
         [Required]
-        public required DateTime End { get; set; }
-        
-        [Required]
-        [MaxLength(50)]
-        public required decimal Price { get; set; }
+        public DateTime End { get; set; } = DateTime.UtcNow.AddDays(7); 
         
         [Required]
         [MaxLength(50)]
-        public required string Phone { get; set; } 
+        public decimal Price { get; set; } = 0; 
+        
+        [Required]
+        [MaxLength(50)]
+        public string Phone { get; set; } = string.Empty; 
         
         [Required]
         [MaxLength(255)]
-        public required string Email { get; set; } 
+        public string Email { get; set; } = string.Empty; 
         
         [Required]
         [MaxLength(50)]
-        public required string FirstName { get; set; } 
+        public string FirstName { get; set; } = string.Empty; 
         
         [Required]
         [MaxLength(50)]
-        public required string LastName { get; set; }
+        public string LastName { get; set; } = string.Empty; 
 
-        [MaxLength(255)] public string? Description { get; set; } = String.Empty; 
+        [MaxLength(255)] 
+        public string? Description { get; set; } = string.Empty; 
         
         [Column(TypeName = "varchar(20)")]
         public ReservationStatus Status { get; set; } = ReservationStatus.Pending; 
